--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="navbar.css">
     <title>About</title>
     <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
