--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <img src="images/mother.png" alt="Mother">
+            <img src="mother.png" alt="Mother">
             <h3>Mother</h3>
             <p>I worked as the production designer and co-screenwriter on the micro short film "Mother."</p>
             <a href="http://lmcfilms.gatech.edu/home/">lmcfilms.gatech.edu/home/</a>
