--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <img src="mother.png" alt="Mother">
-            <h3>Mother</h3>
-            <p>I worked as the production designer and co-screenwriter on the micro short film "Mother."</p>
-            <a href="http://lmcfilms.gatech.edu/home/">lmcfilms.gatech.edu/home/</a>
+            <h3>Glossier UI Design</h3>
+            <p>As a part of my bootcamp with Bits of Good, I designed a login/sign in page for a Glossier, a skincare and beauty company.</p>
+            <a href="https://www.figma.com/file/vOowpScC31wLmYsjUTvUrx/Ansley-Franks?node-id=0%3A1">glossier_design</a>
           </section>
          <!-- End of Project block. -->
         </div>
